@startuml

title US011 \n As an Administrator, I want to remove a sensor from a geographical area, so that it will no longer be used.

skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor ivory
skinparam FontName verdana
skinparam titleFontSize 10


skinparam class {
  BorderColor indianred
  BackgroundColor indianred
  BackgroundColor ivory
   roundcorner 10
   ArrowFontName Verdana
   ArrowColor indianred
   ArrowFontColor darkslategrey
   FontSize 12
}

class GASettingsController
class GASettingsUI
class Mapper
class GeographicArea
class Sensor
class InputUtils

MainUI -- GASettingsUI : >
GASettingsUI -- InputUtils : >
GASettingsUI -- GASettingsController : >
GASettingsController -- Mapper : >
Mapper -- GeographicArea : >
Mapper -- Sensor : >
GASettingsController -- GeographicArea : >

class GASettingsUI {
runUS11()
}

class GASettingsController {
removeSensor( GeographicAreaList, SensorDTO, GeographicAreaDTO )
}

class Mapper {
geoAreaToDTO()
sensorToDTO()
sensorDTOToObject()
}

class GeographicArea{
getElementsAsArray()
getName()
removeSensor( Sensor )
}

class InputUtils{
getInputSensorByList( SensorList )
getGeographicAreaByList( GeographicAreaList )

}

class Sensor {
deactivateSensor();
isActive();
}


@enduml